--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -193,8 +193,9 @@ $button-transition: transform $timing-default ease, box-shadow $timing-default, 
 @mixin fx-hover-nudge {
     // transition: $button-transition;
     &:focus,
-    &:hover {
-        transform: translate3d(3px, 0, 0);
+    &:hover { // tired of shift right, let's go up!
+        // transform: translate3d(3px, 0, 0);
+        transform: translate3d(0, -3px, 0);
     }
 }
 @mixin fx-hover-nudge-left {
