--- a/source/press/index.html.erb
+++ b/source/press/index.html.erb
@@ -24,12 +24,13 @@ feed_url: "https://datica.com/press/feed.xml"
         <div class="columns small-12 medium-3 large-3">
             <%= partial("partials/snippets/person", :locals => { :p => data.site.person["5kC0Y798vm6ag8sCq0O2CQ"], :classes => "block-width-medium", :use_headers => false }) %>
             <hr class="divider"/>
+            <!-- <h4 class="blog-date">Connect With Us</h4> -->
             <%= partial "partials/snippets/press-links" %>
         </div>
         <div class="columns small-12 medium-9 large-7">
             <h2 class="headline-2 group">Company Backstory</h2>
             <p>Datica was founded by <a href="/about/travis" title="More about Travis Good, MD">Travis Good, MD</a>, and Mohan Balachandran, two friends committed to bettering patient care. They were compelled to start Datica after seeing first hand the challenges healthcare faces re-inventing the wheel with compliance and integration.</p>
-            <p>Before starting Datica, the two founders explored healthcare from all angles—practicing and consulting to enterprise health systems and entrepreneurship. Datica's vision is derived from their holistic view of healthcare.</p>
+            <p>Before starting Datica, the two founders explored healthcare from all angles—practicing and consulting to enterprise health systems and entrepreneurship. <a href="/about" title="About Datica & Our Story">Datica's vision</a> is derived from their holistic view of healthcare.</p>
             <p>The foundation of the company is built from members previously at Rackspace, the NSA, Epic, NASA, Influence Health, Intel, and industries such as meteorology, telephony, and pharmaceuticals. The team is a strong mix of industry experts and entrepreneurial veterans.</p>
             <p>Datica is headquartered in Madison, WI, but is built to be a distributed team.</p>
         </div>
