--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Datica brings healthcare to the cloud"
-summary: "Datica provides HIPAA compliance solutions to deploy cloud native workloads and integrate with any hospital EHR."
+summary: "Datica and Sansoro Health merge to help accelerate healthcare’s data-driven future in the cloud."
 author: "Datica, Inc."
 tags: "compliance, HITRUST, integration, EHR, healthcare, education, HIPAA, HL7, FHIR, interoperability"
 customCSS: "home"
@@ -53,8 +53,8 @@ section#top.bg-gray-12.container-image-fill.lozad data-background-image=bg_produ
   .section-article
     .row.align-center.group
       .columns.small-12.medium-12.large-10.text-center
-        h1.headline-2.text-bold Datica brings healthcare to the cloud.
-        p.lead Get through the maze of compliance and onto the cloud faster with Datica.
+        h1.headline-2.text-bold Datica and Sansoro Health merge to help accelerate healthcare’s data-driven future in the cloud.
+        p.lead Datica solves the really hard problems of working with patient data.
         ul.menu.align-center.show-for-medium.text-small
           li
             a.text-bold.spaced-out title="Cloud Compliance" href="/cloud-compliance/" Compliance
@@ -73,8 +73,8 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
     .columns.small-12.medium-12.large-8.text-center
       h2.headline-1.text-bold What's your biggest challenge?
   .button-group.menu.align-center.group
-    = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST assessment", :url => "/cloud-compliance/", :icon_align => "left", :button_classes => "button button--light button--hover-compliance no-nudge", :icon => "icon-chevron-left", :item_id => "get-compliance", :data_track_group => "compliance" }
-    = partial "partials/snippets/button", :locals => { :label => "I need to integrate with an EHR", :url => "/ehr-integration/", :button_classes => "button button--light button--hover-integration no-nudge", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "get-integration", :data_track_group => "integration" }
+    = partial "partials/snippets/button", :locals => { :label => "Compliance is a risk we make go away", :url => "/cloud-compliance/", :icon_align => "left", :button_classes => "button button--light button--hover-compliance no-nudge", :icon => "icon-chevron-left", :item_id => "get-compliance", :data_track_group => "compliance" }
+    = partial "partials/snippets/button", :locals => { :label => "EHR integration is a pain we make easy", :url => "/ehr-integration/", :button_classes => "button button--light button--hover-integration no-nudge", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "get-integration", :data_track_group => "integration" }
   .row.align-center
     .columns.small-12.large-8.text-center
       p.lead <strong>You have complex problems.</strong> Datica has a family of powerful solutions. Powerful when used on their own but meant to work together, our products and solutions address your most pressing challenges.
