--- a/source/press/index.html.erb
+++ b/source/press/index.html.erb
@@ -29,10 +29,8 @@ feed_url: "https://datica.com/press/feed.xml"
         </div>
         <div class="columns small-12 medium-9 large-7">
             <h2 class="headline-2 group">Company Backstory</h2>
-            <p>Datica was founded by <a href="/about/travis" title="More about Travis Good, MD">Travis Good, MD</a>, and Mohan Balachandran, two friends committed to bettering patient care. They were compelled to start Datica after seeing first hand the challenges healthcare faces re-inventing the wheel with compliance and integration.</p>
-            <p>Before starting Datica, the two founders explored healthcare from all angles—practicing and consulting to enterprise health systems and entrepreneurship. <a href="/about" title="About Datica & Our Story">Datica's vision</a> is derived from their holistic view of healthcare.</p>
-            <p>The foundation of the company is built from members previously at Rackspace, the NSA, Epic, NASA, Influence Health, Intel, and industries such as meteorology, telephony, and pharmaceuticals. The team is a strong mix of industry experts and entrepreneurial veterans.</p>
-            <p>Datica is headquartered in Madison, WI, but is built to be a distributed team.</p>
+            <p>Datica was originally founded as Catalyze.io in 2013 with a mission to better patient care. Sansoro Health was founded in 2014 with a mission of liberating patient data from the confines of rigid systems. The two companies merged in June 2019 with a shared vision and purpose: To accelerate healthcare's transformation to a data-driven future on the cloud.</p>
+            <p>Datica is headquartered in Minneapolis, MN, but is built to be a distributed team with hubs located in Madison, WI; Seattle, WA; and Portland, OR.</p>
         </div>
     </div>
 </section>
