--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -18,7 +18,7 @@ ruby:
 
 = partial "assets/icons/inlined/datica-branding-logos-symbol.svg"
 = partial "partials/snippets/alert-ribbon"
-- nav_collection = data.site.collections.to_a.select { |id, entry | (id == "HkskHrVGykqSqOKGiqkaW") }
+- nav_collection = data.site.collections.to_a.select { |id, entry | (id == "4hxxjVGNtEXRK1jkCGKUQc") }
 nav.nav data-theme=theme
   .mobile-toggle.hide-for-large
     a.nav-logo--link href="/" title="Datica Home"
