Updated all nav items to use new `master_nav_id` helper
This ID is a contentful entry that contains all the nav children.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -138,7 +138,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
               .subhead--spaced Integration Suite
               h3.headline-4 Emissary
               p.strip.strip-small.strip-cmi
-              p.lead A scalable, centralized API for clinical data of any time
+              p.lead A scalable, centralized API for clinical data of any type
             .card-divider.card-divider--flush
 
 .strip.strip-cmi
