--- a/source/partials/snippets/_footer.slim
+++ b/source/partials/snippets/_footer.slim
@@ -7,7 +7,7 @@ ruby:
     element_color = "black"
   end
   # this is the CF entry with nav items
-  nav_collection = data.site.collections.to_a.select { |id, entry | (id == "HkskHrVGykqSqOKGiqkaW") }
+  nav_collection = data.site.collections.to_a.select { |id, entry | (id == master_nav_id) }
 
 footer.section-article.container-color--gray-gradient.main-footer role="contentinfo" data-theme=theme
   .row.small-up-2.medium-up-3.large-up-6
